# hello_universe

./: README.md
autoconf/: Makefile.am  README  configure.ac  run.sh
autoconf/src/: Makefile.am  fortran_func.f90  main.c
autoconf/src/.deps/: main.Po
cuda/: hello  hello.cu  makefile
makefile/: hellofunc.c  hellomake.c  hellomake.h
matlab/: makefile
mpi/: Makefile  allreduce.f90  makefile
mpi4py/: hello.py  run.sh
omp/: hello_omp.f90
ompt/: makefile  ongpu  ongpu.c
openacc/: hello_acc.c  run.sh
